{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 213,
  "lineage": "beb20942-4ca5-4057-05ee-12ccb12e3907",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-010876b9ddd38475e",
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:instance/i-01b5f361c23966539",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile-prod",
            "id": "i-01b5f361c23966539",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thanhtha-keypair-prod-thalt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00532b88338107e8c",
            "private_dns": "ip-10-0-1-219.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-3-104-53-151.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.53.151",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b888946c74c0b8c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ae2e6901d69daf4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bd27357c2fd682d",
            "tags": {
              "Name": "ec2-prod-thalt"
            },
            "tags_all": {
              "Name": "ec2-prod-thalt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae2e6901d69daf4c"
            ]
          },
          "dependencies": [
            "module.ec2_role_ssm.aws_iam_instance_profile.ec2_instance_profile",
            "module.ec2_role_ssm.aws_iam_role.ec2_role_ssm",
            "module.key_pair.aws_key_pair.key_pair",
            "module.vpc.aws_security_group.sg-thalt",
            "module.vpc.aws_subnet.subnet-public-thalt",
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:internet-gateway/igw-049fa387a5436f429",
            "id": "igw-049fa387a5436f429",
            "owner_id": "314146337867",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "igw-prod-internet-gateway"
            },
            "tags_all": {
              "Name": "igw-prod-internet-gateway"
            },
            "vpc_id": "vpc-035004a6208eab921"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:route-table/rtb-0d80861a707d6c234",
            "id": "rtb-0d80861a707d6c234",
            "owner_id": "314146337867",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Name": "rtb-prod-private-route-table"
            },
            "tags_all": {
              "Name": "rtb-prod-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035004a6208eab921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:route-table/rtb-0da7e76c3746d4b50",
            "id": "rtb-0da7e76c3746d4b50",
            "owner_id": "314146337867",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049fa387a5436f429",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-prod-public-route-table"
            },
            "tags_all": {
              "Name": "rtb-prod-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035004a6208eab921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-thalt",
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-private-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b13956df2fd32c5",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d80861a707d6c234",
            "subnet_id": "subnet-07fd0ba4d91970b46"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-route-table-thalt",
            "module.vpc.aws_subnet.subnet-private-thalt",
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f09018748bc54b",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d80861a707d6c234",
            "subnet_id": "subnet-054e75d7c917b76f5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-route-table-thalt",
            "module.vpc.aws_subnet.subnet-private-thalt",
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-public-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a5720cd2926dbc",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0da7e76c3746d4b50",
            "subnet_id": "subnet-09bd27357c2fd682d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-thalt",
            "module.vpc.aws_route_table.public-route-table-thalt",
            "module.vpc.aws_subnet.subnet-public-thalt",
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01430ff5b1e6d0bea",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0da7e76c3746d4b50",
            "subnet_id": "subnet-0f611d88adcc450e4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-thalt",
            "module.vpc.aws_route_table.public-route-table-thalt",
            "module.vpc.aws_subnet.subnet-public-thalt",
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:security-group/sg-0ae2e6901d69daf4c",
            "description": "Security group for prod environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae2e6901d69daf4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-sg",
            "name_prefix": "",
            "owner_id": "314146337867",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg.prod-security-group"
            },
            "tags_all": {
              "Name": "sg.prod-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-035004a6208eab921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:subnet/subnet-07fd0ba4d91970b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fd0ba4d91970b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314146337867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "sn-prod-private-subnet-1"
            },
            "tags_all": {
              "Name": "sn-prod-private-subnet-1"
            },
            "vpc_id": "vpc-035004a6208eab921"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:subnet/subnet-054e75d7c917b76f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e75d7c917b76f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314146337867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "sn-prod-private-subnet-2"
            },
            "tags_all": {
              "Name": "sn-prod-private-subnet-2"
            },
            "vpc_id": "vpc-035004a6208eab921"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:subnet/subnet-09bd27357c2fd682d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bd27357c2fd682d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146337867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "sn-prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "sn-prod-public-subnet-1"
            },
            "vpc_id": "vpc-035004a6208eab921"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:subnet/subnet-0f611d88adcc450e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f611d88adcc450e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146337867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "sn-prod-public-subnet-2"
            },
            "tags_all": {
              "Name": "sn-prod-public-subnet-2"
            },
            "vpc_id": "vpc-035004a6208eab921"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-thalt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-thalt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:314146337867:vpc/vpc-035004a6208eab921",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fe92383a35dcf0a",
            "default_route_table_id": "rtb-001faed62337981f4",
            "default_security_group_id": "sg-0795cab0455ccc488",
            "dhcp_options_id": "dopt-06591b29ef1330ba5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035004a6208eab921",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001faed62337981f4",
            "owner_id": "314146337867",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}